--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,9 @@ Imports:
   readr,
   stringr,
   janitor,
-  lubridate
+  lubridate,
+  openxlsx,
+  scales
 Depends: 
     R (>= 2.10)
 Suggests: 
