* change function name from write_report to report_write

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,5 +18,5 @@ export(parse_sisma_smi_cpn)
 export(parse_sisma_smi_mat)
 export(process_sisma_csv)
 export(report_create)
-export(write_report)
+export(report_write)
 importFrom(magrittr,"%>%")
