--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(parse_sisma_ats_saaj_cm)
 export(parse_sisma_ats_smi)
 export(parse_sisma_csv)
 export(parse_sisma_hiv_apss)
+export(parse_sisma_hiv_its)
 export(parse_sisma_hiv_prep)
 export(parse_sisma_hiv_tarv)
 export(parse_sisma_smi_ccr)
