- Formatting for date - user-friendly names for type

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,5 +19,6 @@ export(parse_sisma_smi_cpn)
 export(parse_sisma_smi_mat)
 export(process_sisma_csv)
 export(report_create)
+export(report_create_all)
 export(report_write)
 importFrom(magrittr,"%>%")
