--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(parse_sisma_ats_results)
 export(parse_sisma_ats_saaj_cm)
 export(parse_sisma_ats_smi)
 export(parse_sisma_csv)
+export(parse_sisma_hiv_ajm_hc_mm)
 export(parse_sisma_hiv_apss)
 export(parse_sisma_hiv_its)
 export(parse_sisma_hiv_prep)
