add function parse_sisma_hiv_dah

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(parse_sisma_ats_smi)
 export(parse_sisma_csv)
 export(parse_sisma_hiv_ajm_hc_mm)
 export(parse_sisma_hiv_apss)
+export(parse_sisma_hiv_dah)
 export(parse_sisma_hiv_its)
 export(parse_sisma_hiv_prep)
 export(parse_sisma_hiv_tarv)
