add parse_sisma_smi_cpp and modify parse_sisma_csv

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(parse_sisma_hiv_prep)
 export(parse_sisma_hiv_tarv)
 export(parse_sisma_smi_ccr)
 export(parse_sisma_smi_cpn)
+export(parse_sisma_smi_cpp)
 export(parse_sisma_smi_mat)
 export(process_sisma_csv)
 export(report_create)
