add parse_sisma_smi_ccd & modifiy wrapper functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(parse_sisma_hiv_dah)
 export(parse_sisma_hiv_its)
 export(parse_sisma_hiv_prep)
 export(parse_sisma_hiv_tarv)
+export(parse_sisma_smi_ccd)
 export(parse_sisma_smi_ccr)
 export(parse_sisma_smi_cpn)
 export(parse_sisma_smi_cpp)
