--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export("%>%")
 export(attach_meta_coord)
+export(attach_meta_partner)
 export(attach_meta_uid)
 export(clean_sisma_csv)
 export(parse_sisma_ats_auto)
