add dedup_naomi function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(attach_meta_coord)
 export(attach_meta_partner)
 export(attach_meta_uid)
 export(clean_sisma_csv)
+export(dedup_naomi)
 export(parse_sisma_ats_auto)
 export(parse_sisma_ats_ccsd)
 export(parse_sisma_ats_history)
