--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(parse_sisma_smi_cpn)
 export(parse_sisma_smi_cpp)
 export(parse_sisma_smi_mat)
 export(parse_sisma_smi_pav)
+export(process_disa_cv)
 export(process_sisma_csv)
 export(report_create)
 export(report_create_all)
