add function parse_disa_dpi

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(parse_sisma_smi_cpp)
 export(parse_sisma_smi_mat)
 export(parse_sisma_smi_pav)
 export(process_disa_cv)
+export(process_disa_dpi)
 export(process_sisma_csv)
 export(report_create)
 export(report_create_all)
