add function parse_sisma_smi_ccs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(parse_sisma_hiv_prep)
 export(parse_sisma_hiv_tarv)
 export(parse_sisma_smi_ccd)
 export(parse_sisma_smi_ccr)
+export(parse_sisma_smi_ccs)
 export(parse_sisma_smi_cpn)
 export(parse_sisma_smi_cpp)
 export(parse_sisma_smi_mat)
