modification to description to resolve package dependency github action error

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,5 +34,7 @@ Suggests:
     knitr,
     rmarkdown,
     glue
+Remotes:
+    usaid-mozambique/mozR
 VignetteBuilder: knitr
 URL: https://usaid-mozambique.github.io/sismar/
