addition for generate_site_table

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(attach_meta_partner)
 export(attach_meta_uid)
 export(clean_sisma_csv)
 export(dedup_naomi)
+export(generate_site_table)
 export(parse_sisma_ats_auto)
 export(parse_sisma_ats_ccsd)
 export(parse_sisma_ats_history)
