correction to data_sisma_smi_pf_map and addition of parse_sisma_smi_pf

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(parse_sisma_smi_cpn)
 export(parse_sisma_smi_cpp)
 export(parse_sisma_smi_mat)
 export(parse_sisma_smi_pav)
+export(parse_sisma_smi_pf)
 export(parse_sisma_smi_ug)
 export(process_disa_cv)
 export(process_disa_dpi)
