--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,9 @@ Package: sismar
 Title: Transform tabular export files from SISMA
 Version: 0.1.0
 Authors@R: c(
-    person("Joe", "Lara", , "jlara@usaid.gov", role = c("aut", "cre")),
-    person("Karishma", "Srikanth", role = c("aut"),
-    email = "ksrikanth@usaid.gov"))
+    person("Joe", "Lara", email = "jlara@usaid.gov", role = c("aut", "cre")),
+    person("Karishma", "Srikanth", email = "ksrikanth@usaid.gov", role = c("aut")),
+    person("Kirstin", "Lyon", email = "kirstin.c.lyon@gmail.com", role = c("aut")))
 Description: Provides a set of functions for creating analytical datasets from SISMA CSV downloads. This 
     includes functions that reshape files into long format, remove unnecessary variables, and engineer
     features useful in analysis.
