--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(parse_sisma_smi_cpp)
 export(parse_sisma_smi_mat)
 export(parse_sisma_smi_pav)
 export(parse_sisma_smi_pf)
+export(parse_sisma_smi_pf_int)
 export(parse_sisma_smi_ug)
 export(process_disa_cv)
 export(process_disa_dpi)
