--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,9 @@ export("%>%")
 export(attach_meta_coord)
 export(attach_meta_partner)
 export(attach_meta_uid)
+export(check_exact_match)
 export(clean_sisma_csv)
+export(clean_sisma_df)
 export(dedup_naomi)
 export(generate_site_table)
 export(parse_sisma_ats_auto)
@@ -34,7 +36,9 @@ export(parse_sisma_smi_ug)
 export(process_disa_cv)
 export(process_disa_dpi)
 export(process_sisma_csv)
+export(process_sisma_export)
 export(report_create)
 export(report_create_all)
 export(report_write)
+export(set_language)
 importFrom(magrittr,"%>%")
