--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,7 +17,7 @@ export(parse_sisma_ats_results)
 export(parse_sisma_ats_saaj_cm)
 export(parse_sisma_ats_smi)
 export(parse_sisma_csv)
-export(parse_sisma_hiv_ajm_hc_mm)
+export(parse_sisma_hiv_ajmhcmm)
 export(parse_sisma_hiv_apss)
 export(parse_sisma_hiv_dah)
 export(parse_sisma_hiv_its)
