--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,4 +41,5 @@ export(report_create)
 export(report_create_all)
 export(report_write)
 export(set_language)
+importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
