add example data to inst/extdata and add read_example_csv function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(process_disa_cv)
 export(process_disa_dpi)
 export(process_sisma_csv)
 export(process_sisma_export)
+export(read_example_csv)
 export(report_create)
 export(report_create_all)
 export(report_write)
