add function attach_meta_pepfar_ip

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export("%>%")
 export(attach_meta_coord)
 export(attach_meta_partner)
+export(attach_meta_pepfar_ip)
 export(attach_meta_uid)
 export(clean_sisma_csv)
 export(dedup_naomi)
