--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,4 +39,5 @@ export(process_sisma_csv)
 export(report_create)
 export(report_create_all)
 export(report_write)
+importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
