addition of set_sisma_folder function and clean-up of documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,5 +44,6 @@ export(report_create)
 export(report_create_all)
 export(report_write)
 export(set_language)
+export(setup_sismar_folder)
 importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
