--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,9 @@ Imports:
     openxlsx,
     scales,
     mozR,
-    lifecycle
+    lifecycle,
+    crayon,
+    usethis
 Depends: 
     R (>= 2.10)
 Suggests: 
