add function id_check_disa

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(clean_sisma_csv)
 export(clean_sisma_df)
 export(dedup_naomi)
 export(generate_site_table)
+export(id_check_disa)
 export(parse_sisma_ats_auto)
 export(parse_sisma_ats_ccsd)
 export(parse_sisma_ats_history)
