improvments to process_disa_dpi so that it can process both old and new submission templates.  Also addition of clean_disa_dpi

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(attach_meta_partner)
 export(attach_meta_pepfar_ip)
 export(attach_meta_uid)
 export(check_exact_match)
+export(clean_disa_dpi)
 export(clean_sisma_csv)
 export(clean_sisma_df)
 export(dedup_naomi)
