--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,6 +1,12 @@
 url: https://usaid-mozambique.github.io/sismar/
+
 template:
   bootstrap: 5
+  bslib:
+    base_font: {google: "Montserrat"}
+    heading_font: {google: "Lato"}
+    code_font: {google: "Source Code Pro"}
+    primary: "#306cc9"
 
 lang: pt
 
