**feat** initialize shiny app and test

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(process_disa_dpi)
 export(process_sisma_csv)
 export(process_sisma_export)
 export(read_example_csv)
+export(run_sismar_app)
 export(seq_vars)
 export(set_language)
 export(setup_sismar_folder)
