**fix** improvements to function descriptions and translation to portuguese remaining functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,6 @@ export(check_exact_match)
 export(clean_disa_dpi)
 export(clean_sisma_csv)
 export(clean_sisma_df)
-export(dedup_naomi)
 export(id_check_disa)
 export(parse_sisma_ats_auto)
 export(parse_sisma_ats_ccsd)
@@ -39,6 +38,7 @@ export(parse_sisma_smi_pf_int)
 export(parse_sisma_smi_ug)
 export(process_disa_cv)
 export(process_disa_dpi)
+export(process_naomi)
 export(process_sisma_csv)
 export(process_sisma_export)
 export(read_example_csv)
