**feat** add parse bes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(parse_sisma_ats_index)
 export(parse_sisma_ats_results)
 export(parse_sisma_ats_saaj_cm)
 export(parse_sisma_ats_smi)
+export(parse_sisma_bes)
 export(parse_sisma_csv)
 export(parse_sisma_hiv_ajmhcmm)
 export(parse_sisma_hiv_apss)
