**feat** add functions for ine population files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(clean_disa_dpi)
 export(clean_sisma_csv)
 export(clean_sisma_df)
 export(id_check_disa)
+export(load_pop_ine)
 export(parse_sisma_ats_auto)
 export(parse_sisma_ats_ccsd)
 export(parse_sisma_ats_history)
@@ -40,9 +41,11 @@ export(parse_sisma_smi_ug)
 export(process_disa_cv)
 export(process_disa_dpi)
 export(process_naomi)
+export(process_pop_ine)
 export(process_sisma_csv)
 export(process_sisma_export)
 export(read_example_csv)
+export(recode_ine_age)
 export(seq_vars)
 export(set_language)
 export(setup_sismar_folder)
